--- a/locator.html
+++ b/locator.html
@@ -37,6 +37,10 @@
             padding: 1em 5em;
         }
 
+        .searcher .localise .icon {
+            width: 1.5em;
+        }
+
         .searcher input[type="text"]:focus {
             outline: none;
         }
@@ -224,7 +228,7 @@
         </div>
     </header>
     <main>
-        <div style="width: 100%; height: 90vh; display: flex;">
+        <div style="width: 100%; display: flex;">
             <div style="width: 50%; height: 100%;">
                 <ul class="arts_selector">
                     <li><a href="#">Todas</a></li>
@@ -237,7 +241,7 @@
                 </ul>
                 <div class="searcher">
                     <input type="text" placeholder="Buscar...">
-                    <span class="localise">Usar mi ubicación</span>
+                    <span class="localise"><img class="icon" alt="Marker" src="./assets/icons/location_marker.svg"> Usar mi ubicación</span>
                 </div>
                 <div class="locator_results_searcher">
                     <div>
@@ -304,10 +308,190 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dojo_card">
+                            <span class="art_type">AIKIDO</span>
+                            <div class="dojo_logo">
+                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                            </div>
+                            <div class="dojo_desc">
+                                <span class="dojo_title">Centro Aikido Takemusu</span>
+                                <span class="dojo_address">Carrer Quarter General Luque, 07300, Inca</span>
+                                <div class="locator_dojo_contact_buttons">
+                                    <img class="icon" alt="Website" src="./assets/icons/internet.svg">
+                                    <img class="icon" alt="Phone" src="./assets/icons/call.svg">
+                                    <img class="icon" alt="Email" src="./assets/icons/email.svg">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div style="width: 50%; height: 100%;" id="map"></div>
+            <div style="width: 50%; height: 100vh; position: sticky; top: 0;" id="map"></div>
         </div>
     </main>
     <footer>
