Filter News Mockup

--- a/calendario.html
+++ b/calendario.html
@@ -19,8 +19,7 @@
     <header>
         <div class="menu_title">
             <a class="logo" href="#">
-                <img alt="Logo"
-                    src="./assets/img/cropped-Logo_fede-2.png" />
+                <img alt="Logo" src="./assets/img/cropped-Logo_fede-2.png" />
                 Federació Balear de Judo i EE. AA.
             </a>
         </div>
