News Filter mockup updated

--- a/locator.html
+++ b/locator.html
@@ -21,7 +21,7 @@
             gap: 2em;
             text-transform: uppercase;
             font-size: 13px;
-            border-bottom: 1px solid rgb(104 104 104);
+            border-bottom: 1px solid #cbcbcb;
         }
 
         #map {
@@ -43,6 +43,7 @@
 
         .searcher input[type="text"]:focus {
             outline: none;
+            background: none;
         }
 
         .searcher input[type="text"] {
@@ -50,11 +51,15 @@
             height: 2em;
             text-transform: uppercase;
             border: none;
-            border-bottom: 1px solid rgb(104 104 104);
+            border-bottom: 1px solid #cbcbcb;
+            background-image: url(assets/icons/1382519138.svg);
+            background-repeat: no-repeat;
+            background-position: calc(100% - .5em) center;
+            background-size: 1.25em;
         }
 
         .localise {
-            border: 1px solid rgb(104 104 104);
+            border: 1px solid #cbcbcb;
             height: 2em;
             display: flex;
             align-items: center;
@@ -78,7 +83,7 @@
 
         .dojo_card {
             width: 48%;
-            border: 1px solid rgb(104 104 104);
+            border: 1px solid #cbcbcb;
             position: relative;
             display: flex;
         }
