News description changed

--- a/noticia.html
+++ b/noticia.html
@@ -145,7 +145,7 @@
                         <li>Campeonato</li>
                     </ul>
                     <h1 style="margin: .5rem 0;color: #000;">Grandes resultados del Kendo Balear en el I Campeonato de España Infal y cadete.</h1>
-                    <h3 style="margin: .5rem 0;">Múltiples medallas</h3>
+                    <h3 style="margin: .5rem 0;">Kendo Balear arrasa en el I Campeonato de España Infal y Cadete con impresionantes logros.</h3>
                     <div class="share_news">
                         Compartir:
                         <ul>
