--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                     <ul>
                         <li><img class="icon" src="./assets/icons/instagram.svg"/><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
                         <li><img class="icon" src="./assets/icons/facebook.svg"/><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
+                        <li><img class="icon" src="./assets/icons/twitter.svg"/><a target="_blank" href="https://twitter.com/fbjyda">Twitter</a></li>
                         <li><img class="icon" src="./assets/icons/youtube.svg"/><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
                     </ul>
                 </div>
